--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,34 @@
+@font-face {
+	font-family: AppleDisplay;
+	font-weight: Bold;
+	src: url(../fonts/SF-Bold.otf);
+}
+
+@font-face {
+	font-family: AppleRegular;
+	font-weight: Regular;
+	src: url(../fonts/SF-Regular.otf);
+
+}@font-face {
+	font-family: AppleBoldItalic;
+	font-weight: Bold italic;
+	src: url(../fonts/SFProDisplayBold.ttf);
+
+}@font-face {
+	font-family: AppleSemiBold;
+	font-weight: Semi Bold;
+	src: url(../fonts/SF-Semibold.otf);
+
+}@font-face {
+	font-family: AppleRegularItalic;
+	font-weight: Regular Italic;
+	src: url(../fonts/SF-RegularItalic.otf);
+}
+
+
+
+
+
 /**************/
 /* CSS REMEDY */
 /**************/
@@ -18,6 +49,9 @@
 	/* startje */
 	--color-text:#111;
 	--color-background:#eee;
+	--footer-background-color:#f5f5f7;;
+	--footer-text-color:#6e6e73;
+
 }
 
 
@@ -30,22 +64,147 @@
 
 /* jouw code */
 
+html.toonMenu {
+	overflow:hidden;
+}
+
 body {
 	margin: 0;
 }
 
-	
+section  img {
+	width: 100%;
+}
 
-header a img{
-	height: 2em;
+section {
+	display: grid;
+}
+
+	
+header nav {
+	top:0;
+	gap: 1em;
 	display: flex;
-	justify-content: space-between;
+	position: sticky;
 	align-items: center;
 }
 
+header nav button{
+	padding: 0;
+	height: 2em;
+	border: none;
+	color: inherit;
+	cursor: pointer;
+	outline: inherit;
+	background: none;
+}
+
+header nav button:nth-of-type(3){
+	z-index: 1000;
+	position:relative;
+}
+
+header nav button img{
+	height: 2em;
+}
+
+header a img{
+	height: 1em;
+}
+
+header nav h1 {
+	margin-right: auto;
+	padding-left: 1em;
+}
+
+main {
+	display: grid;
+}
+
 main section a img {
-	max-width: 375px;
+	max-width: 100%;
+}
+
+header nav ul:first-of-type {
+	
+	top:0;
+    left:0;
+    right:0;
+	gap:1em;
+    bottom:0;
+	padding:1em;
+	display:grid;
+	position:fixed;
+    translate:-100% 0%;
+	align-content:start;
+	background-color: black;
+    transition:translate .3s;
+	
+}
+header nav.toonMenu ul:first-of-type { 
+
+	margin: 0;
+	translate: 0 0;
+	background-color: black;
+	
+	
+}
+
+header nav.toonMenu > button:nth-of-type(3) img {
+	height: 10em;
+	content:url(/images/close-button.png);
 }
 
 
 
+header nav ul li a{
+	
+	color: white;
+	padding-left: 3em;
+	list-style-type: none;
+	text-decoration: none;
+	font-family: AppleDisplay;	
+}
+footer {
+	background-color: var(--footer-background-color);
+	color:var(--footer-text-color);
+	padding: 1.05em 0 0.7em;
+}
+
+footer p{
+	font-family: AppleRegular;
+	font-size: 0.75em;
+	line-height: 1.33337;
+	letter-spacing: -.01em;
+	padding: 0 2em 0 2em;
+	
+}
+
+/*
+main section:nth-of-type(1) {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+}
+
+main section:nth-of-type(1) a:nth-of-type(3) {
+	grid-column: 1 / 3 ;
+
+}
+
+main section:nth-of-type(1) a:nth-of-type(6) {
+	grid-column: 1 / 3 ;
+}
+
+main section:nth-of-type(1) a:nth-of-type(9) {
+	grid-column: 1 / 3 ;
+}
+*/
+
+
+
+/* 
+header h1 {
+font-family: AppleDisplay
+font-weight: bold;
+}
+*/
