--- a/styles/style.css
+++ b/styles/style.css
@@ -51,6 +51,10 @@
 	--color-background:#eee;
 	--footer-background-color:#f5f5f7;;
 	--footer-text-color:#6e6e73;
+	--maxWidth:60em;
+	--headerHeight:3em;
+	--headerBackgroundColor:rgba(22, 22, 23, .8);
+	--openNavBackgroundColor:#161617;
 
 }
 
@@ -64,6 +68,28 @@
 
 /* jouw code */
 
+
+.section1 a img{
+	position: relative;
+	max-width: 100% ;
+}
+
+
+
+ 
+.section1 a button:first-of-type {
+		position: fixed;
+		background: none;
+		top: 240px; /* Pas de pixelwaarde aan op basis van jouw ontwerpbehoeften */
+    	left: 200px;
+		transform: translate(-50%, -50%);
+		color: #2997ff;
+		border:none;
+	}
+
+
+
+
 html.toonMenu {
 	overflow:hidden;
 }
@@ -72,13 +98,21 @@ body {
 	margin: 0;
 }
 
-section  img {
+main section  img {
 	width: 100%;
 }
 
-section {
-	display: grid;
+@media (width > 45em) {
+	.section1  {
+		display:grid;
+		grid-template-columns:1fr 1fr;
+	}
+	
+	a:nth-of-type(-n + 3) {
+		grid-column:1/-1;
+	}
 }
+
 
 	
 header nav {
@@ -87,7 +121,12 @@ header nav {
 	display: flex;
 	position: sticky;
 	align-items: center;
+	height: var(--headerHeight);
+	background-color: var(--headerBackgroundColor);
+
 }
+
+
 
 header nav button{
 	padding: 0;
@@ -105,7 +144,11 @@ header nav button:nth-of-type(3){
 }
 
 header nav button img{
-	height: 2em;
+	height: 1em;
+	
+
+	margin-right: 1em;
+	
 }
 
 header a img{
@@ -142,29 +185,281 @@ header nav ul:first-of-type {
 	
 }
 header nav.toonMenu ul:first-of-type { 
-
 	margin: 0;
 	translate: 0 0;
-	background-color: black;
-	
-	
+	background-color: var(--openNavBackgroundColor);
 }
 
 header nav.toonMenu > button:nth-of-type(3) img {
-	height: 10em;
-	content:url(/images/close-button.png);
+	height: 1em;
+	content: url(/images/cross-small-svgrepo-com.svg);
 }
 
-
-
 header nav ul li a{
-	
 	color: white;
 	padding-left: 3em;
 	list-style-type: none;
 	text-decoration: none;
 	font-family: AppleDisplay;	
 }
+
+
+/** Code voor de slider **/
+
+.fotoSlider {
+	--fotoSliderMainColor: #FFF;
+	--fotoSliderAccentColor:#1b75b3;
+	--fotoSliderShadeColor:#ddd9;
+  	--fotoSliderInverseColor:#e48a4c;
+ 	--fotoSliderAutoScrollInterval:4000;
+
+  	position: relative;
+	outline:none;
+}
+
+.fotoSlider > ul {
+	margin: 0; padding: 0;
+	list-style: none;
+	  display: flex;
+	  
+	  /* handmatig scrollen is mogelijk */
+	  overflow: hidden;
+	  
+	  /* snappen als er gescrolled wordt - andere helft bij li */
+	scroll-snap-type: inline mandatory;
+	
+	/* smooth als met js gescrolled wordt */
+	  scroll-behavior: smooth;
+	
+	/* scrollbar zoveel mogelijk verbergen */
+	-webkit-overflow-scrolling: touch; /* voor iOS*/
+	-ms-overflow-style: none; /* voor IE */
+	  scrollbar-width: none; /* voor firefox */
+  }
+  
+  .fotoSlider > ul::-webkit-scrollbar {
+	/* scrollbar zoveel mogelijk verbergen */
+	display: none; /* voor chrome, safari en edge*/
+  }
+  
+  
+  /**************************/
+  /* de carrousel elementen */
+  .fotoSlider > ul li {
+	flex-basis: 100%;
+	flex-shrink: 0;
+	/* snappen als er gescrolled wordt - andere helft bij ul */
+	  scroll-snap-align:center;
+  }
+  
+  
+  /**********************************/
+  /* de carrousel elementen content */
+  
+  /* de stijlen voor jouw content hier */
+  .fotoSlider > ul li > img {
+	display: block;
+	width: 100%;
+  }
+  
+  
+  /****************/
+  /* DE BOLLETJES */
+  /****************/
+  
+  /* de bolletjes container */
+  .fotoSlider nav ul {
+	position: absolute;
+	  left: 2em; right: 2em;
+	  bottom: 0;
+	  margin: 0;
+	padding: 0 0 .5em;
+	list-style: none;
+	  
+	  display: flex;
+  /* 	flex-wrap:wrap; */
+	justify-content: center;
+	gap:.4em;
+  }
+  
+  /* een bolletje container */
+  .fotoSlider > nav li {
+	  flex-basis: 1.2em;
+	  aspect-ratio: 1/1;
+  }
+  
+  /* de bolletjes */
+  .fotoSlider > nav a {
+	display: block;
+	width:100%;
+	height:100%;
+	
+	text-decoration: none;
+	  color: var(--fotoSliderMainColor);
+	background-color: var(--fotoSliderShadeColor);
+	  border-radius: 50%;
+	outline: none;
+	  box-shadow: inset 0 0 0 1px currentColor;
+	
+	transition: 0.5s;
+  }
+  
+  .fotoSlider > nav a:hover,
+  .fotoSlider > nav a:focus {
+	color: var(--fotoSliderAccentColor);
+  }
+  
+  .fotoSlider > nav a.current {
+	background-color: currentColor;
+  }
+  
+  .fotoSlider > nav a:hover,
+  .fotoSlider > nav a:focus {
+	color: var(--fotoSliderAccentColor);
+  }
+  
+  .fotoSlider > nav a.current {
+	background-color: currentColor;
+  }
+  
+  
+  /*********************/
+  /* PLAY/PAUSE BUTTON */
+  /*********************/
+  
+  .fotoSlider > button {
+	position: absolute;
+	right: .5em;
+	bottom: .5em;
+	
+	width: 1.2em;
+	aspect-ratio:1/1;
+	padding:0;
+	
+	font-size:inherit;
+	appearance: none;
+	background-color: var(--fotoSliderShadeColor);
+  
+	border: none;
+	  outline: none;
+	  box-shadow: inset 0 0 0 1px currentColor;
+	  cursor: pointer;
+	  
+	transition: 0.5s;
+  
+	  display: flex;
+	justify-content: center;
+	  align-items: center;
+  }
+  
+  .fotoSlider > button:hover,
+  .fotoSlider > button:focus {
+	color: var(--fotoSliderAccentColor);
+  }
+  
+  /* play/pause button */
+  .fotoSlider > button::before,
+  .fotoSlider > button::after {
+	content: "";
+	position: absolute;
+	width: .5em; height: 2px;
+	background-color: currentColor;
+	transform-origin: calc(100% - 1px) center;
+	transition:transform 0.5s;
+  }
+  
+  /* indien niet aan het auto-scrollen */
+  /* de streepjes vormen een play-icoon */
+  .fotoSlider > button::before {
+	  transform: translateY(0) rotate(45deg);
+  }
+  .fotoSlider > button::after {
+	  transform: translateY(0) rotate(-45deg);
+  }
+  
+  /* indien aan het auto-scrollen */
+  /* de streepjes vormen een pauze-icoon */
+  .fotoSlider.autoScrolling > button::before {
+	  transform: translateY(-2px);
+  }
+  .fotoSlider.autoScrolling > button::after {
+	  transform: translateY(2px);
+  }
+  
+  /* in de button draait een 'eierwekker' */
+  .fotoSlider.autoScrolling > button {
+	animation-name: carrouselAutoScrollingButton;
+	animation-duration: calc(var(--fotoSliderAutoScrollInterval) * 1ms);
+	animation-timing-function: linear;
+	animation-iteration-count: infinite;
+  }
+
+  @keyframes carrouselAutoScrollingButton {
+	0%{ background-image: conic-gradient(var(--fotoSliderInverseColor) 0%, transparent 0%); }
+	2%{ background-image: conic-gradient(var(--fotoSliderInverseColor) 2%, transparent 0%); }
+	4%{ background-image: conic-gradient(var(--fotoSliderInverseColor) 4%, transparent 0%); }
+	6%{ background-image: conic-gradient(var(--fotoSliderInverseColor) 6%, transparent 0%); }
+	8%{ background-image: conic-gradient(var(--fotoSliderInverseColor) 8%, transparent 0%); }
+	
+	10%{ background-image: conic-gradient(var(--fotoSliderInverseColor) 10%, transparent 0%); }
+	12%{ background-image: conic-gradient(var(--fotoSliderInverseColor) 12%, transparent 0%); }
+	14%{ background-image: conic-gradient(var(--fotoSliderInverseColor) 14%, transparent 0%); }
+	16%{ background-image: conic-gradient(var(--fotoSliderInverseColor) 16%, transparent 0%); }
+	18%{ background-image: conic-gradient(var(--fotoSliderInverseColor) 18%, transparent 0%); }
+
+	20%{ background-image: conic-gradient(var(--fotoSliderInverseColor) 20%, transparent 0%); }
+	22%{ background-image: conic-gradient(var(--fotoSliderInverseColor) 22%, transparent 0%); }
+	24%{ background-image: conic-gradient(var(--fotoSliderInverseColor) 24%, transparent 0%); }
+	26%{ background-image: conic-gradient(var(--fotoSliderInverseColor) 26%, transparent 0%); }
+	28%{ background-image: conic-gradient(var(--fotoSliderInverseColor) 28%, transparent 0%); }
+
+	30%{ background-image: conic-gradient(var(--fotoSliderInverseColor) 30%, transparent 0%); }
+	32%{ background-image: conic-gradient(var(--fotoSliderInverseColor) 32%, transparent 0%); }
+	34%{ background-image: conic-gradient(var(--fotoSliderInverseColor) 34%, transparent 0%); }
+	36%{ background-image: conic-gradient(var(--fotoSliderInverseColor) 36%, transparent 0%); }
+	38%{ background-image: conic-gradient(var(--fotoSliderInverseColor) 38%, transparent 0%); }
+
+	40%{ background-image: conic-gradient(var(--fotoSliderInverseColor) 40%, transparent 0%); }
+	42%{ background-image: conic-gradient(var(--fotoSliderInverseColor) 42%, transparent 0%); }
+	44%{ background-image: conic-gradient(var(--fotoSliderInverseColor) 44%, transparent 0%); }
+	46%{ background-image: conic-gradient(var(--fotoSliderInverseColor) 46%, transparent 0%); }
+	48%{ background-image: conic-gradient(var(--fotoSliderInverseColor) 48%, transparent 0%); }
+
+	50%{ background-image: conic-gradient(var(--fotoSliderInverseColor) 50%, transparent 0%); }
+	52%{ background-image: conic-gradient(var(--fotoSliderInverseColor) 52%, transparent 0%); }
+	54%{ background-image: conic-gradient(var(--fotoSliderInverseColor) 54%, transparent 0%); }
+	56%{ background-image: conic-gradient(var(--fotoSliderInverseColor) 56%, transparent 0%); }
+	58%{ background-image: conic-gradient(var(--fotoSliderInverseColor) 58%, transparent 0%); }
+
+	60%{ background-image: conic-gradient(var(--fotoSliderInverseColor) 60%, transparent 0%); }
+	62%{ background-image: conic-gradient(var(--fotoSliderInverseColor) 62%, transparent 0%); }
+	64%{ background-image: conic-gradient(var(--fotoSliderInverseColor) 64%, transparent 0%); }
+	66%{ background-image: conic-gradient(var(--fotoSliderInverseColor) 66%, transparent 0%); }
+	68%{ background-image: conic-gradient(var(--fotoSliderInverseColor) 68%, transparent 0%); }
+
+	70%{ background-image: conic-gradient(var(--caroCarrouselInverseColor) 70%, transparent 0%); }
+	72%{ background-image: conic-gradient(var(--caroCarrouselInverseColor) 72%, transparent 0%); }
+	74%{ background-image: conic-gradient(var(--caroCarrouselInverseColor) 74%, transparent 0%); }
+	76%{ background-image: conic-gradient(var(--caroCarrouselInverseColor) 76%, transparent 0%); }
+	78%{ background-image: conic-gradient(var(--caroCarrouselInverseColor) 78%, transparent 0%); }
+
+	80%{ background-image: conic-gradient(var(--caroCarrouselInverseColor) 80%, transparent 0%); }
+	82%{ background-image: conic-gradient(var(--caroCarrouselInverseColor) 82%, transparent 0%); }
+	84%{ background-image: conic-gradient(var(--caroCarrouselInverseColor) 84%, transparent 0%); }
+	86%{ background-image: conic-gradient(var(--caroCarrouselInverseColor) 86%, transparent 0%); }
+	88%{ background-image: conic-gradient(var(--caroCarrouselInverseColor) 88%, transparent 0%); }
+
+	90%{ background-image: conic-gradient(var(--caroCarrouselInverseColor) 90%, transparent 0%); }
+	92%{ background-image: conic-gradient(var(--caroCarrouselInverseColor) 92%, transparent 0%); }
+	94%{ background-image: conic-gradient(var(--caroCarrouselInverseColor) 94%, transparent 0%); }
+	96%{ background-image: conic-gradient(var(--caroCarrouselInverseColor) 96%, transparent 0%); }
+	98%{ background-image: conic-gradient(var(--caroCarrouselInverseColor) 98%, transparent 0%); }
+	
+	100%{ background-image: conic-gradient(var(--caroCarrouselInverseColor) 100%, transparent 0%); }
+}
+
+
+
 footer {
 	background-color: var(--footer-background-color);
 	color:var(--footer-text-color);
